--- a/app/views/pages/myaccount.html.erb
+++ b/app/views/pages/myaccount.html.erb
@@ -1,5 +1,5 @@
 <body>
-  <nav class="nav-extended grey darken-2">
+  <nav class="nav-extended grey darken-3">
     <div class="nav-background">
       <div class="pattern active" style="background-image: url('http://i.imgur.com/7Il5O29.png');"></div>
     </div>
@@ -17,14 +17,14 @@
       </ul>
 
       <div class="nav-header center">
-        <h1>MY ACCOUNT</h1>
+        <h1>My Account</h1>
         <div class="tagline"><i class="fa ellipses-h"></i></div>
       </div>
     </div>
 
     <!-- Fixed Masonry Filters -->
 
-    <div class="nav-content grey darken-3">
+    <div class="nav-content grey darken-4">
       <div class="container">
         <ul class="tabs tabs-transparent">
           <li class="tab"><a class="active" href="#test1">Profile</a></li>
@@ -52,30 +52,30 @@
           <br>
 
           <div class="row">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <input value="Bill" id="first_name2" type="text" class="validate">
               <label class="active" for="first_name2">First Name</label>
             </div>
           </div>
 
           <div class="row">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <input value="Hewitt" id="first_name2" type="text" class="validate">
               <label class="active" for="first_name2">Last Name</label>
             </div>
           </div>
 
           <div class="row">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <input value="billhewitt22@googlemail.com" id="first_name2" type="text" class="validate">
               <label class="active" for="first_name2">Email Address</label>
             </div>
           </div>
 
           <div class="row button">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <div class="right">
-                <a class="waves-effect waves-light btn">Save</a>
+                <a class="waves-effect waves-light btn blue">Save</a>
               </div>
             </div>
           </div>
@@ -87,30 +87,30 @@
         <br>
 
           <div class="row">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <input value="************" id="first_name2" type="text" class="validate">
               <label class="active" for="first_name2">Current Password</label>
             </div>
           </div>
 
           <div class="row">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <input placeholder="" ="New Password" id="first_name2" type="text" class="validate">
               <label class="active" for="first_name2">New Password</label>
             </div>
           </div>
 
           <div class="row">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <input placeholder="" ="Repeat New Password" id="first_name2" type="text" class="validate">
               <label class="active" for="first_name2">Repeat New Password</label>
             </div>
           </div>
 
           <div class="row button">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <div class="right">
-                <a class="waves-effect waves-light btn">Save</a>
+                <a class="waves-effect waves-light btn blue">Save</a>
               </div>
             </div>
           </div>
@@ -123,15 +123,15 @@
         <br>
 
           <div class="row">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <input value="@billbill2210" id="first_name2" type="text" class="validate">
               <label class="active" for="first_name2">Instagram Account</label>
             </div>
           </div>
           <div class="row button">
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m12 l6">
               <div class="right">
-                <a class="waves-effect waves-light btn">Unlink Account</a>
+                <a class="waves-effect waves-light btn blue">Unlink Account</a>
               </div>
             </div>
           </div>
