--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,12 +44,12 @@
         My Slideshows
         <% end %>
     </li>
-    <li class="active"><%= link_to pages_myaccount_path, id: "logo" do %>
+    <li><%= link_to pages_myaccount_path, id: "logo" do %>
         <i class="material-icons">perm_identity</i>
         My Account
         <% end %>
     </li>
-    <li class="active"><%= link_to root_path, id: "logo" do %>
+    <li><%= link_to root_path, id: "logo" do %>
         <i class="material-icons">settings_power</i>
         Logout
         <% end %>
