--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -66,4 +66,16 @@
     selectMonths: true, // Creates a dropdown to control month
     selectYears: 15 // Creates a dropdown of 15 years to control year
   });
+
+   $(".button-collapse").sideNav();
+
+    $(document).ready(function(){
+    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+    $('.modal').modal();
+  });
+
+      $(document).ready(function(){
+    $('.tooltipped').tooltip({delay: 50});
+  });
+</script>
    </script>
