--- a/app/views/pages/myaccount.html.erb
+++ b/app/views/pages/myaccount.html.erb
@@ -4,7 +4,9 @@
       <div class="pattern active" style="background-image: url('http://i.imgur.com/7Il5O29.png');"></div>
     </div>
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo"><a href="index.html" class="brand-logo"><%= image_tag("UEFA.png", :alt => "rss feed") %></a></a>
+      <%= link_to root_path do %>
+        <%= image_tag "UEFA.png", class: "brand-logo" %>
+      <% end %>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><%= link_to "My Slideshows", root_path %></li>
@@ -36,9 +38,21 @@
 
   </nav>
   <ul class="side-nav" id="nav-mobile">
-    <li class="active"><a href="index.html"><i class="material-icons">camera</i>My Slideshows</a></li>
-    <li><a href="full-header.html"><i class="material-icons">fullscreen</i>My Account</a></li>
-    <li><a href="horizontal.html"><i class="material-icons">swap_horiz</i>Logout</a></li>
+    <li><%= link_to root_path, id: "logo" do %>
+        <i class="material-icons">theaters</i>
+        My Slideshows
+        <% end %>
+    </li>
+    <li class="active"><%= link_to pages_myaccount_path, id: "logo" do %>
+        <i class="material-icons">perm_identity</i>
+        My Account
+        <% end %>
+    </li>
+    <li><%= link_to root_path, id: "logo" do %>
+        <i class="material-icons">settings_power</i>
+        Logout
+        <% end %>
+    </li>
   </ul>
 
   <!-- End Navigation -->
