--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -65,11 +65,11 @@
           <br>
 
             <div class="row">
-              <div class="col s12 m4 l4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn-large halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
@@ -77,11 +77,11 @@
                 </div>
               </div>
 
-              <div class="col s12 m4 l4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn-large halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
@@ -89,11 +89,11 @@
                 </div>
               </div>
 
-              <div class="col s12 m4 l4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn-large halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
@@ -101,11 +101,11 @@
                 </div>
               </div>
 
-              <div class="col s12 m4 l4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn-large halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Hidden From Slideshow</span>
@@ -113,11 +113,11 @@
                 </div>
               </div>
 
-              <div class="col s12 m4 l4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn-large halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
@@ -125,17 +125,55 @@
                 </div>
               </div>
 
-              <div class="col s12 m4 l4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn-large halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Hidden From Slideshow</span>
                   </div>
                 </div>
               </div>
+
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="http://placehold.it/400x300">
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title">Hidden From Slideshow</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="http://placehold.it/400x300">
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title">Visible On Slideshow</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="http://placehold.it/400x300">
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title">Hidden From Slideshow</span>
+                  </div>
+                </div>
+              </div>
+
+            
 
 
 
