--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,6 @@
       <%= link_to root_path do %>
         <%= image_tag "UEFA.png", class: "brand-logo" %>
       <% end %>
-    </div>
 
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
@@ -82,7 +81,7 @@
                         <p>142 posts since Feb 27, 2017</p>
                       </div>
                       <div class="card-action">
-                        <%= link_to "Edit Slideshow", pages_edit_path, class: "blue-text text-blue" %>
+                        <a href="#" class="blue-text text-blue">Edit Slideshow</a>
                         <a class="grey-text text-grey" href="#modal1">Delete</a>
                       </div>
                     </div><!-- End Card -->
