--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -81,7 +81,7 @@
                         <p>142 posts since Feb 27, 2017</p>
                       </div>
                       <div class="card-action">
-                        <a href="#" class="blue-text text-blue">Edit Slideshow</a>
+                        <%= link_to "Edit Slideshow", pages_edit_path, class: "blue-text text-blue" %>
                         <a class="grey-text text-grey" href="#modal1">Delete</a>
                       </div>
                     </div><!-- End Card -->
