--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -69,7 +69,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
@@ -81,7 +81,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
@@ -93,7 +93,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
@@ -105,7 +105,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Hidden From Slideshow</span>
@@ -117,7 +117,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
@@ -129,7 +129,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Hidden From Slideshow</span>
@@ -141,7 +141,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Hidden From Slideshow</span>
@@ -153,7 +153,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
@@ -165,13 +165,15 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="http://placehold.it/400x300">
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
                   <div class="card-content">
                     <span class="card-title">Hidden From Slideshow</span>
                   </div>
                 </div>
               </div>
+
+
 
             
 
@@ -180,6 +182,20 @@
 
 
             </div>
+
+            <ul class="pagination center-align">
+              <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+              <li class="active blue"><a href="#!">1</a></li>
+              <li class="waves-effect"><a href="#!">2</a></li>
+              <li class="waves-effect"><a href="#!">3</a></li>
+              <li class="waves-effect"><a href="#!">4</a></li>
+              <li class="waves-effect"><a href="#!">5</a></li>
+              <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+            </ul>
+
+            <br>
+            <br>
+
 
 
         </div><!-- End Profile tab -->
