--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -235,6 +235,19 @@
 
 
         </div><!-- End Password tab -->
+
+
+          <div class="fixed-action-btn">
+            <a class="btn-floating btn-large blue">
+              <i class="large material-icons">menu</i>
+            </a>
+            <ul>
+              <li><a class="btn-floating tooltipped green data-position="left" data-delay="50" data-tooltip="Launch Slideshow""><i class="material-icons">done</i></a></li>
+              <li><a class="btn-floating red"><i class="material-icons">visibility_off</i></a></li>
+              <li><a class="btn-floating yellow"><i class="material-icons">perm_media</i></a></li>
+              <li><a class="btn-floating grey darken-2"><i class="material-icons">launch</i></a></li>
+            </ul>
+          </div>
       
 
       </div>
@@ -248,5 +261,9 @@
     $(document).ready(function(){
     // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
     $('.modal').modal();
+  });
+
+      $(document).ready(function(){
+    $('.tooltipped').tooltip({delay: 50});
   });
 </script>
