--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -242,10 +242,10 @@
               <i class="large material-icons">menu</i>
             </a>
             <ul>
-              <li><a class="btn-floating tooltipped green data-position="left" data-delay="50" data-tooltip="Launch Slideshow""><i class="material-icons">done</i></a></li>
-              <li><a class="btn-floating red"><i class="material-icons">visibility_off</i></a></li>
-              <li><a class="btn-floating yellow"><i class="material-icons">perm_media</i></a></li>
-              <li><a class="btn-floating grey darken-2"><i class="material-icons">launch</i></a></li>
+              <li><a class="btn-floating tooltipped green" data-position="left" data-delay="50" data-tooltip="Approve All Posts"><i class="material-icons">done</i></a></li>
+              <li><a class="btn-floating tooltipped red" data-position="left" data-delay="50" data-tooltip="Hide All Posts From Slideshow"><i class="material-icons">visibility_off</i></a></li>
+              <li><a class="btn-floating tooltipped yellow" data-position="left" data-delay="50" data-tooltip="Download All"><i class="material-icons""><i class="material-icons">perm_media</i></a></li>
+              <li><a class="btn-floating tooltipped grey darken-2" data-position="left" data-delay="50" data-tooltip="Launch Slideshow"><i class="material-icons""><i class="material-icons">launch</i></a></li>
             </ul>
           </div>
       
