--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -206,7 +206,10 @@
           <ul class="collapsible collapsible-accordion" data-collapsible="accordion">
           <li class="">
             <div class="collapsible-header"><i class="material-icons">mode_edit</i>Slideshow Design</div>
-            <div class="collapsible-body" style="display: none;"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></div>
+            <div class="collapsible-body" style="display: none;"><span>
+              Choose which design you'd like to use on the slideshow
+
+            </span></div>
           </li>
           <li class="">
             <div class="collapsible-header"><i class="material-icons">computer</i>Display Options</div>
@@ -217,6 +220,15 @@
             <div class="collapsible-body"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></div>
           </li>
         </ul>
+        <br>
+        <div class="row button">
+            <div class="input-field col s12 m12 l12">
+              <div class="right">
+              <a class="waves-effect waves-blue btn-flat">Preview</a>
+                <a class="waves-effect waves-light btn blue">Save</a>
+              </div>
+            </div>
+          </div>
 
 
 
