--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -220,7 +220,7 @@
           </div>
           </li>
           <li class="">
-            <div class="collapsible-header"><i class="material-icons">computer</i>Slideshow Display Options</div>
+            <div class="collapsible-header"><i class="material-icons">computer</i>Display Options</div>
             <div class="collapsible-body" style="display: none;">
               <div class="input-field">
                 <select>
