--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -29,7 +29,7 @@
     <div class="nav-content grey darken-4">
       <div class="container">
         <ul class="tabs tabs-transparent">
-          <li class="tab"><a class="active" href="#test1">Moderate</a></li>
+          <li class="tab"><a class="active" href="#test1">Moderation</a></li>
           <li class="tab"><a href="#test2">Settings</a></li>
         </ul>
     </div>
@@ -272,6 +272,10 @@
           </li>
           <li>
             <div class="collapsible-header"><i class="material-icons">info_outline</i>Information Message</div>
+            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></div>
+          </li>
+          <li>
+            <div class="collapsible-header"><i class="material-icons">settings</i>Approval Settings</div>
             <div class="collapsible-body"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></div>
           </li>
         </ul>
