--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,10 @@ div.picker__date-display {
   @extend .blue;
 }
 
+p.mute {
+  color:#9e9e9e;
+}
+
 div.picker__weekday-display {
   @extend .blue;
 }
