--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -204,7 +204,7 @@
         <br>
         <div class="row">
         <div class="col l8 m8 s12">
-          <ul class="collapsible" data-collapsible="expandable">
+          <ul class="collapsible" data-collapsible="accordion">
           <li class="">
             <div class="collapsible-header"><i class="material-icons">mode_edit</i>Slideshow Design</div>
             <div class="collapsible-body" style="display: none;">
