--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -380,7 +380,7 @@
             <ul>
               <li><a class="btn-floating tooltipped green" data-position="left" data-delay="50" data-tooltip="Approve All Posts"><i class="material-icons">done</i></a></li>
               <li><a class="btn-floating tooltipped red" data-position="left" data-delay="50" data-tooltip="Hide All Posts"><i class="material-icons">visibility_off</i></a></li>
-              <li><a class="btn-floating tooltipped yellow" data-position="left" data-delay="50" data-tooltip="Download All Posts"><i class="material-icons""><i class="material-icons">file_download</i></a></li>
+              <li><a class="btn-floating tooltipped orange" data-position="left" data-delay="50" data-tooltip="Download All Posts"><i class="material-icons""><i class="material-icons">file_download</i></a></li>
               <li><a class="btn-floating tooltipped grey darken-2" data-position="left" data-delay="50" data-tooltip="Launch Slideshow"><i class="material-icons""><i class="material-icons">launch</i></a></li>
             </ul>
           </div>
