--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -208,9 +208,8 @@
         <div class="col l8 m8 s12">
           <ul class="collapsible" data-collapsible="accordion">
           <li class="">
-            <div class="collapsible-header"><i class="material-icons">mode_edit</i>Slideshow Design</div>
+            <div class="collapsible-header active"><i class="material-icons">mode_edit</i>Slideshow Design</div>
             <div class="collapsible-body" style="display: none;">
-
             <div class="row">
               <div clas="col l6 m6 s12">
               <div class="input-field">
