--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,1 +1,85 @@
-show.html.erb
+<div class="row">
+	<div class="col l12">
+		<h1 class="center-align">#GIGGSHOUR</h1>
+	</div>
+</div>
+
+<br>
+<br>
+<div class="row">
+	<div class="col l3">
+		<div class="card">
+	        <div class="card-image">
+	          <img src="http://placehold.it/400x300">
+	        </div>
+	        <div class="card-content">
+	        	<div class="row">
+	        		<div class="col l3">
+	          <img src="http://i.pravatar.cc/300" alt="" class="circle responsive-img">
+	          		</div>
+	          		<div class="col l9">
+	          			<p><b>Lovin' my time at this event</b></p>
+	          			<p>#havingfun #giggshour #hellomum</p>
+	          		</div>
+	          	</div>
+	        </div>
+      </div>
+	</div>
+
+	<div class="col l3">
+		<div class="card">
+	        <div class="card-image">
+	          <img src="http://placehold.it/400x300">
+	        </div>
+	        <div class="card-content">
+	        	<div class="row">
+	        		<div class="col l3">
+	          <img src="http://i.pravatar.cc/300" alt="" class="circle responsive-img">
+	          		</div>
+	          		<div class="col l9">
+	          			<p><b>Lovin' my time at this event</b></p>
+	          			<p>#havingfun #giggshour #hellomum</p>
+	          		</div>
+	          	</div>
+	        </div>
+      </div>
+	</div>
+
+	<div class="col l3">
+		<div class="card">
+	        <div class="card-image">
+	          <img src="http://placehold.it/400x300">
+	        </div>
+	        <div class="card-content">
+	        	<div class="row">
+	        		<div class="col l3">
+	          <img src="http://i.pravatar.cc/300" alt="" class="circle responsive-img">
+	          		</div>
+	          		<div class="col l9">
+	          			<p><b>Lovin' my time at this event</b></p>
+	          			<p>#havingfun #giggshour #hellomum</p>
+	          		</div>
+	          	</div>
+	        </div>
+      </div>
+	</div>
+
+	<div class="col l3">
+		<div class="card">
+	        <div class="card-image">
+	          <img src="http://placehold.it/400x300">
+	        </div>
+	        <div class="card-content">
+	        	<div class="row">
+	        		<div class="col l3">
+	          <img src="http://i.pravatar.cc/300" alt="" class="circle responsive-img">
+	          		</div>
+	          		<div class="col l9">
+	          			<p><b>Lovin' my time at this event</b></p>
+	          			<p>#havingfun #giggshour #hellomum</p>
+	          		</div>
+	          	</div>
+	        </div>
+      </div>
+	</div>
+</div>
