--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -34,7 +34,7 @@
 	        <div class="card-content">
 	        	<div class="row">
 	        		<div class="col l3">
-	          <img src="http://i.pravatar.cc/300" alt="" class="circle responsive-img">
+	          <img src="http://i.pravatar.cc/150?u=fake@pravatar.com" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
 	          			<p><b>Lovin' my time at this event</b></p>
@@ -53,7 +53,7 @@
 	        <div class="card-content">
 	        	<div class="row">
 	        		<div class="col l3">
-	          <img src="http://i.pravatar.cc/300" alt="" class="circle responsive-img">
+	          <img src="http://i.pravatar.cc/150?img=3" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
 	          			<p><b>Lovin' my time at this event</b></p>
@@ -72,7 +72,7 @@
 	        <div class="card-content">
 	        	<div class="row">
 	        		<div class="col l3">
-	          <img src="http://i.pravatar.cc/300" alt="" class="circle responsive-img">
+	          <img src="http://i.pravatar.cc/150?img=4" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
 	          			<p><b>Lovin' my time at this event</b></p>
